@startuml

title __MYANDROIDNOTES's Class Diagram__\n

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.AddActivity {
        - etContent : EditText
        - etTitle : EditText
        + add()
        # onCreate()
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.EditActivity {
        - etContent : EditText
        - etTitle : EditText
        + saveEditedNote()
        # onCreate()
        - iniData()
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.MainActivity {
        {static} + KEY_LAYOUT_MODE : String
        {static} + MODE_GRID : int
        {static} + MODE_LINEAR : int
        - TAG : String
        - currentListLayoutMode : int
        - mButtonAdd : FloatingActionButton
        - mNotes : List<Notes>
        - mRecyclerView : RecyclerView
        + addNotes()
        + onCreateOptionsMenu()
        + onOptionsItemSelected()
        + onPrepareOptionsMenu()
        # onCreate()
        # onResume()
        - getCurrentTime()
        - initData()
        - initEvents()
        - initView()
        - refreshDataFromDb()
        - setListLayout()
        - setToGridList()
        - setToLinearList()
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.NoteDbOpenHelper {
        + CreateDataBase()
        + NoteDbOpenHelper()
        + deleteFromDbById()
        + initDataBase()
        + insertData()
        + onUpgrade()
        + queryAllNotes()
        + queryByTitle()
        + updateData()
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.Notes {
        - contents : String
        - id : long
        - time : String
        - title : String
        + Notes()
        + Notes()
        + getContents()
        + getId()
        + getTime()
        + getTitle()
        + setContents()
        + setId()
        + setTime()
        + setTitle()
        + toString()
    }
  }
  

  com.example.myandroidnotes.AddActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myandroidnotes.AddActivity o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.EditActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myandroidnotes.EditActivity o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.EditActivity o-- com.example.myandroidnotes.Notes : note
  com.example.myandroidnotes.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myandroidnotes.MainActivity o-- com.example.myandroidnotes.adapter.MyAdapter : mAdapter
  com.example.myandroidnotes.MainActivity o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.NoteDbOpenHelper o-- com.example.myandroidnotes.Notes : mNote
  com.example.myandroidnotes.Notes .up.|> java.io.Serializable
  com.example.myandroidnotes.Notes -up-|> org.litepal.crud.LitePalSupport


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
